@@ -1,3 +1,7 @@
+2004-03-25  Marcus Brinkmann  <marcus@gnu.org>
+
+	* types.h: Protect inclusion with _HURD_TYPES_H.
+
 2004-03-22  Marcus Brinkmann  <marcus@gnu.org>
 
 	* Makefile.am: New file.
